--- a/costcalc/templates/products/detail_product.html
+++ b/costcalc/templates/products/detail_product.html
@@ -1,74 +1,155 @@
 {% extends 'base.html' %}
 
-{% macro render_dynamic_table(data) %}
-    {% if data %}
-        <table class="table table-bordered table-striped">
-            <thead>
-                {{ render_table_head(data[0]) }}
-            </thead>
-            <tbody>
-                {% for item in data %}
-                    {{ render_table_row(item) }}
-                {% endfor %}
-            </tbody>
-        </table>
-    {% else %}
-        <p>No data available.</p>
-    {% endif %}
-{% endmacro %}
-
-{% macro render_table_head(item) %}
-    <tr>
-        {% for key in item.keys() %}
-            <th>{{ key | capitalize }}</th>
-        {% endfor %}
-    </tr>
-{% endmacro %}
-
-{% macro render_table_row(item) %}
-    <tr>
-        {% for key, value in item.items() %}
-            <td>{{ value }}</td>
-        {% endfor %}
-    </tr>
-{% endmacro %}   
-
-{% macro render_dict_horizontal_table(data) %}
-    {% if data %}
-        <table class="table table-bordered table-striped">
-            <thead>
-                <tr>
-                    {% for key in data.keys() %}
-                        <th>{{ key }}</th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    {% for value in data.values() %}
-                        <td>{{ value }}</td>
-                    {% endfor %}
-                </tr>
-            </tbody>
-        </table>
-    {% else %}
-        <p>No data available.</p>
-    {% endif %}
-{% endmacro %}
-
 {% block content %}
-
 <div>
     <h3 style="display: inline-block;">产品名称：{{ product.name }}</h3>
     <a href="{{ url_for('products.edit_product', product_id=product.id) }}" class="btn btn-primary" style="float:right; vertical-align: top;">编辑</a>
 </div>
 
-{{ render_dynamic_table(product.materials_dict) }}
-{{ render_dynamic_table(product.labors_dict) }} 
+<table class="table table-bordered">
+    <thead>
+        <tr><th colspan="8" style="text-align: center; background-color: antiquewhite;">原材料费用</th></tr>
+        <tr>
+            <th>材料名称</th>
+            <th>材料规格</th>
+            <th>单价/g</th>
+            <th>材料净重</th>
+            <th>材料毛边</th>
+            <th>材料毛重</th>
+            <th>合格率</th>
+            <th>Ttl(CNY)</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for material in product.materials_dict %}
+        <tr>
+            <td>{{ material.get('材料名称') }}</td>
+            <td>{{ material.get('材料规格') }}</td>
+            <td>{{ material.get('单价/g') }}</td>
+            <td>{{ material.get('材料净重') }}</td>
+            <td>{{ material.get('材料毛边') }}</td>
+            <td>{{ material.get('材料毛重') }}</td>
+            <td>{{ material.get('合格率') }}</td>
+            <td>{{ material.get('TTL(CNY)') }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
+    <tfoot>
+        <tr>
+            <td colspan="7"></td>
+            <td>{{ product.cost_dict.get('材料费') }}</td>
+        </tr>
+    </tfoot>
+</table>
 
-{{ render_dict_horizontal_table(product.trans_dict) }}
-{{ render_dict_horizontal_table(product.coef_dict) }}
-{{ render_dict_horizontal_table(product.customization_dict)}}
-{{ render_dict_horizontal_table(product.cost_dict)}}
+<table class="table table-bordered">
+    <thead>
+        <tr><th colspan="8" style="text-align: center; background-color: antiquewhite;">设备、人工费</th></tr>
+        <tr>
+            <th>工序</th>
+            <th>设备折旧</th>
+            <th>电费CNY/H</th>
+            <th>工序工时/秒</th>
+            <th>人工CNY/H</th>
+            <th>产能/次</th>
+            <th>合格率</th>
+            <th>Ttl(CNY)</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for labor in product.labors_dict %}
+        <tr>
+            <td>{{ labor.get('工序') }}</td>
+            <td>{{ labor.get('设备折旧') }}</td>
+            <td>{{ labor.get('电费CNY/H') }}</td>
+            <td>{{ labor.get('工序工时/秒') }}</td>
+            <td>{{ labor.get('人工CNY/H') }}</td>
+            <td>{{ labor.get('产能/次') }}</td>
+            <td>{{ labor.get('合格率') }}</td>
+            <td>{{ labor.get('TTL(CNY)') }}</td>
+        </tr>
+        {% endfor %}
+    <tfoot>
+        <tr>
+            <td colspan="7"></td>
+            <td>{{ product.cost_dict.get('人工费') }}</td>
+        </tr>
+    </tfoot>
+    </tbody>
+</table>
+
+<table class="table table-bordered">
+    <thead>
+        <tr><th colspan="4" style="text-align: center; background-color: antiquewhite;">运输费</th></tr>
+    </thead>
+    <tbody>
+        <tr>
+            <th>运输方式</th>
+            <th>目的地</th>
+            <th>运输费/KG</th>
+            <th>运输费/个</th>
+        </tr>
+        <tr>
+            <td>{{ product.trans_dict.get('运输方式') }}</td>
+            <td>{{ product.trans_dict.get('目的地') }}</td>
+            <td>{{ product.trans_dict.get('运输费/KG') }}</td>
+            <td>{{ product.trans_dict.get('运输费/个') }}</td>
+        </tr>
+    </tbody>
+</table>
+
+<table class="table table-bordered">
+    <thead>
+        <tr><th colspan="7" style="text-align: center; background-color: antiquewhite;">费用系数</th></tr>
+    </thead>
+    <tbody>
+        <tr>
+            {% for key, value in product.coef_dict.items() %}
+            <th>{{ key }}</th>
+            {% endfor %}
+        </tr>
+        <tr>
+            {% for key, value in product.coef_dict.items() %}
+            <td>{{ value }}</td>
+            {% endfor %}
+        </tr>
+    </tbody>
+</table>
+
+<table class="table table-bordered">
+    <thead>
+        <tr><th colspan="9" style="text-align: center; background-color: antiquewhite;">客户信息</th></tr>
+    </thead>
+    <tbody>
+        <tr>
+            {% for key, value in product.customization_dict.items() %}
+            <th>{{ key }}</th>
+            {% endfor %}
+        </tr>
+        <tr>
+            {% for key, value in product.customization_dict.items() %}
+            <td>{{ value }}</td>
+            {% endfor %}
+        </tr>
+    </tbody>
+</table>
+
+<table class="table table-bordered">
+    <thead>
+        <tr><th colspan="6" style="text-align: center; background-color: antiquewhite;">总费用</th></tr>
+    </thead>
+    <tbody>
+        <tr>
+            {% for key, value in product.cost_dict.items() %}
+            <th>{{ key }}</th>
+            {% endfor %}
+        </tr>
+        <tr>
+            {% for key, value in product.cost_dict.items() %}
+            <td>{{ value }}</td>
+            {% endfor %}
+        </tr>
+    </tbody>
+</table>
 
 {% endblock %}
