--- a/costcalc/templates/auth/login.html
+++ b/costcalc/templates/auth/login.html
@@ -1,5 +1,20 @@
 {% extends 'base.html' %}
 
 {% block content%}
-    <p>welcome to auth login page</p>
+<h1>登陆</h1>
+<a href="{{ url_for('auth.register') }}">注册</a>
+
+<form method="POST" action="{{ url_for('auth.login') }}">
+  {{ form.hidden_tag() }}
+  <p>
+    {{ form.username.label }}<br>
+    {{ form.username(size=32) }}<br>
+  </p>
+  <p>
+    {{ form.password.label }}<br>
+    {{ form.password(size=32) }}<br>
+  </p>
+  <p>{{ form.submit() }}</p>
+</form>
+
 {% endblock %}
