--- a/costcalc/templates/base.html
+++ b/costcalc/templates/base.html
@@ -19,13 +19,15 @@
         <div class="collapse navbar-collapse justify-content-end">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('auth.login') }}">用户</a>
+                    <a class="btn nav-link" href="{{ url_for('auth.login') }}">用户</a>
+                    <a class="btn nav-link" href="{{ url_for('auth.logout') }}">退出</a>
                 </li>
             </ul>
         </div>
     </nav>
 
     <div class="container-flex">
+        {% if current_user.is_authenticated %}
         <!-- Sidebar -->
         <div class="sidebar">
             <!-- <h5>导航栏</h5> -->
@@ -33,14 +35,17 @@
                 <li class="nav-item">
                     <a class="nav-link nav-link-custom {% if request.path == url_for('products.manage_product') %}active{% endif %}" href="{{ url_for('products.manage_product') }}">产品</a>
                 </li>
+                {% if current_user.role == 'admin' %}
                 <li class="nav-item">
                     <a class="nav-link nav-link-custom {% if request.path == url_for('resources.manage_material') %}active{% endif %}" href="{{ url_for('resources.manage_material') }}">材料</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link nav-link-custom {% if request.path == url_for('resources.manage_labor') %}active{% endif %}" href="{{ url_for('resources.manage_labor') }}">人工</a>
                 </li>
+                {% endif %}
             </ul>
         </div>
+        {% endif %}
 
         <!-- Main Content -->
         <div class="content">
