--- a/costcalc/templates/resources/manage_labor.html
+++ b/costcalc/templates/resources/manage_labor.html
@@ -5,21 +5,9 @@
 <div class="container">
   <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newLaborModal">添加新人工</button>
   <div id="laborTable"></div> <!-- 人工表格将在这里渲染 -->
+  
+ {% include 'resources/_labor_form_modal.html' %}
 
-  <!-- newLaborModal -->
-  <div class="modal fade" id="newLaborModal" tabindex="-1" aria-labelledby="newLaborModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-          <div class="modal-content">
-              <div class="modal-header">
-                  <h5 class="modal-title" id="newLaborModalLabel">新人工</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                  {{ render_form(form, action=url_for('resources.new_labor'), method='post', id='newLaborForm') }}
-              </div>
-          </div>
-      </div>
-  </div>
 
   <!-- Edit Labor Modal -->
   <div class="modal fade" id="editLaborModal" tabindex="-1" aria-labelledby="editLaborModalLabel" aria-hidden="true">
