--- a/costcalc/templates/products/manage_product.html
+++ b/costcalc/templates/products/manage_product.html
@@ -8,6 +8,6 @@
 
 {% block scripts %}
 {{ super() }}
-<script src="{{ url_for('static', filename='js/product.js') }}"></script>
+<script src="{{ url_for('static', filename='js/manageProduct.js') }}"></script>
 {% endblock %}
 
